Configured zuul routes and hystrix for all services properties in api-gateway

--- a/configurations/api-gateway-local.properties
+++ b/configurations/api-gateway-local.properties
@@ -7,15 +7,20 @@ eureka.client.fetch-registry=true
 
 zuul.routes.authservice.path=/auth-service/**
 zuul.routes.authservice.service-id=auth-service
-
-zuul.routes.adminservice.path=/admin-service/**
-zuul.routes.adminservice.service-id=admin-service
+zuul.routes.authservice.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.authservice.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.profileservice.path=/profile-service/**
 zuul.routes.profileservice.service-id=profile-service
+zuul.routes.profileservice.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.profileservice.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.userservice.path=/user-service/**
 zuul.routes.userservice.service-id=user-service
+zuul.routes.userservice.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.userservice.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.groupservice.path=/group-service/**
 zuul.routes.groupservice.service-id=group-service
+zuul.routes.groupservice.sensitive-headers=Set-Cookie,Authorization
+hystrix.command.groupservice.execution.isolation.thread.timeoutInMilliseconds=600000
