--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       KAFKA_ADVERTISED_HOST_NAME: kafka
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPIC: "topic.user.new:1, topic.user.update:1, topic.user.delete:1, topic.profile.new:1, group.relationship.user:1"
+      KAFKA_CREATE_TOPIC: "topic.user.new:1, topic.user.update:1, topic.user.delete:1, topic.profile.new:1"
     depends_on:
       - zookeeper
 
@@ -102,26 +102,6 @@ services:
     volumes:
        - /avatar/
 
-  socialnetwork-group-service:
-    image: socialnetwork-group-service-1.0
-    environment:
-      - SPRING_PROFILE_ACTIVE=local
-      - SOCIALNETWORK_JDBC_URL=jdbc:postgresql://socialnetwork-database:5432/sn_user_service_db
-      - SOCIALNETWORK_JDBC_USER=sn_group_service_user
-      - SOCIALNETWORK_JDBC_PASSWORD=sn_group_service_password
-    ports:
-      - "8085:8085"
-      - "5008:5008"
-    depends_on:
-      - socialnetwork-eureka-service-discovery
-      - socialnetwork-config-server
-      - socialnetwork-zuul-api-gateway
-      - socialnetwork-database
-      - kafka
-    entrypoint: ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=20 -- java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5008 -jar socialnetwork-group-service-1.0.jar
-    volumes:
-      - /avatar/
-
   socialnetwork-support-service:
     image: socialnetwork-support-service-1.0
     environment:
@@ -158,7 +138,6 @@ services:
     depends_on:
       - socialnetwork-user-service
       - socialnetwork-profile-service
-      - socialnetwork-group-service
 
   axonserver:
     image: axoniq/axonserver
