--- a/socialnetwork-config-server/docker/Dockerfile
+++ b/socialnetwork-config-server/docker/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:14
 
 EXPOSE 8888
 
-COPY ./target/socialnetwork-config-server-1.0.jar socialnetwork-config-server-1.0
+COPY ../target/socialnetwork-config-server-1.0.jar socialnetwork-config-server-1.0
 
 ENTRYPOINT ["java", "-jar", "socialnetwork-config-server-1.0"]
