--- a/socialnetwork-app-client/docker/Dockerfile
+++ b/socialnetwork-app-client/docker/Dockerfile
@@ -2,10 +2,10 @@ FROM node:12
 
 EXPOSE 3000
 
-COPY package.json ./
+COPY ../package.json ./
 
 RUN npm install
 
-COPY . .
+COPY .. .
 
 CMD ["npm", "run", "start"]
