--- a/socialnetwork-api-gateway/docker/Dockerfile
+++ b/socialnetwork-api-gateway/docker/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:14
 
 EXPOSE 8762
 
-ADD ../wait-for-it.sh /wait-for-it.sh
+ADD ./wait-for-it.sh /wait-for-it.sh
 
-COPY ../target/socialnetwork-api-gateway-1.0.jar socialnetwork-api-gateway-1.0.jar
+COPY ./target/socialnetwork-api-gateway-1.0.jar socialnetwork-api-gateway-1.0.jar
 
 ENTRYPOINT ["java", "-jar", "socialnetwork-api-gateway-1.0.jar"]
