--- a/socialnetwork-integration-testing/docker/Dockerfile
+++ b/socialnetwork-integration-testing/docker/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:14
 
 EXPOSE 8087
 
-COPY ../target/socialnetwork-integration-testing-1.0.jar socialnetwork-integration-testing-1.0.jar
+COPY ./target/socialnetwork-integration-testing-1.0.jar socialnetwork-integration-testing-1.0.jar
 
 ENTRYPOINT ["java", "-jar", "socialnetwork-integration-testing-1.0.jar"]
