--- a/postgresql/docker/Dockerfile
+++ b/postgresql/docker/Dockerfile
@@ -2,6 +2,6 @@ FROM postgres:12
 
 EXPOSE 5432
 
-COPY init.sql /docker-entrypoint-initdb.d/init.sql
+COPY ./init.sql /docker-entrypoint-initdb.d/init.sql
 
 CMD ["docker-entrypoint.sh", "postgres"]
