--- a/socialnetwork-profile-service/docker/Dockerfile
+++ b/socialnetwork-profile-service/docker/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:14
 
 EXPOSE 8081
 
-ADD ../wait-for-it.sh /wait-for-it.sh
+ADD ./wait-for-it.sh /wait-for-it.sh
 
-COPY ../target/socialnetwork-profile-service-1.0.jar socialnetwork-profile-service-1.0.jar
+COPY ./target/socialnetwork-profile-service-1.0.jar socialnetwork-profile-service-1.0.jar
 
 ENTRYPOINT ["java", "-jar", "socialnetwork-profile-service-1.0.jar"]
