--- a/socialnetwork-service-discovery/docker/Dockerfile
+++ b/socialnetwork-service-discovery/docker/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:14
 
 EXPOSE 8761
 
-COPY ../target/socialnetwork-service-discovery-1.0.jar socialnetwork-service-discovery-1.0.jar
+COPY ./target/socialnetwork-service-discovery-1.0.jar socialnetwork-service-discovery-1.0.jar
 
 ENTRYPOINT ["java", "-jar", "socialnetwork-service-discovery-1.0.jar"]
