--- a/socialnetwork-unit-testing/docker/Dockerfile
+++ b/socialnetwork-unit-testing/docker/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:14
 
 EXPOSE 8086
 
-COPY ../target/socialnetwork-unit-testing-1.0.jar socialnetwork-unit-testing-1.0.jar
+COPY ./target/socialnetwork-unit-testing-1.0.jar socialnetwork-unit-testing-1.0.jar
 
 ENTRYPOINT ["java", "-jar", "socialnetwork-unit-testing-1.0.jar"]
