--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>socialnetwork-user-service</module>
         <module>socialnetwork-unit-testing</module>
         <module>socialnetwork-integration-testing</module>
+        <module>socialnetwork-kafka-common</module>
     </modules>
 
     <properties>
