--- a/socialnetwork-user-service/pom.xml
+++ b/socialnetwork-user-service/pom.xml
@@ -35,6 +35,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>local.socialnetwork.kafka.common</groupId>
+            <artifactId>socialnetwork-kafka-common</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
             <version>${spring.boot.version}</version>
