Updated profile-service-local.properties in config-server

--- a/spring-config/configurations/profile-service-local.properties
+++ b/spring-config/configurations/profile-service-local.properties
@@ -29,6 +29,9 @@ sn.profile.upload.avatar.dir.path=/avatar/
 sn.kafka.server=kafka:9092
 sn.kafka.groupId=profile-default-group-id
 sn.kafka.trustedPackages=*
+
+# SocialNetwork: Kafka Topics
+
 sn.kafka.topic.user.update=topic.user.update
 sn.kafka.topic.user.delete=topic.user.delete
 
