Updated user-service-local.properties in config-server

--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -27,4 +27,7 @@ sn.profile.default.avatar.path=/avatar/default-avatar.jpg
 sn.kafka.server=kafka:9092
 sn.kafka.groupId=user-default-group-id
 sn.kafka.trustedPackages=*
-sn.kafka.topic.profile.new=topic.profile.new
+
+# SocialNetwork: Kafka Topics
+
+sn.kafka.producer.topic.profile.new=topic.profile.new
