--- a/spring-config/configurations/auth-service-local.properties
+++ b/spring-config/configurations/auth-service-local.properties
@@ -1,16 +1,12 @@
 # Application name
-
 spring.application.name=auth-service
 
-# Server port
-
+# Application port
 server.port=8080
 
 # Jwt Configuration
-
 security.jwt.token.secret-key=sn_socialnetwork
 security.jwt.token.expire-length=3600000
 
-# Eureka Server
-
+# Spring Cloud: Eureka Configuration
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
