--- a/socialnetwork-auth-service/src/main/resources/bootstrap.properties
+++ b/socialnetwork-auth-service/src/main/resources/bootstrap.properties
@@ -1,11 +1,8 @@
 # Application name
-
 spring.application.name=auth-service
 
 # Profile
-
 spring.profiles.active=local
 
-# Cloud Config URI
-
+# Spring Cloud: Config
 spring.cloud.config.uri=http://socialnetwork-config-server:8888
