--- a/socialnetwork-service-discovery/src/main/resources/application.properties
+++ b/socialnetwork-service-discovery/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+# Application name
 spring.application.name=service-discovery
 
+# Application port
 server.port=8761
 
+# Spring Cloud: Config
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
