--- a/socialnetwork-unit-testing/src/main/resources/application.properties
+++ b/socialnetwork-unit-testing/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 # Application name
-
 spring.application.name=unit-testing
 
 # Application port
-
 server.port=8087
 
 # Profile
-
 spring.profiles.active=local
 
-# Eureka Server
-
+# Spring Cloud: Config
 eureka.client.service-url.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka/
