--- a/spring-config/configurations/api-gateway-local.properties
+++ b/spring-config/configurations/api-gateway-local.properties
@@ -1,9 +1,13 @@
+# Application name
 spring.application.name=api-gateway
 
+# Application port
 server.port=8762
 
+# Spring Cloud: Eureka
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
+# Spring Cloud: Zuul Configuration
 zuul.routes.authservice.path=/auth-service/**
 zuul.routes.authservice.service-id=auth-service
 zuul.routes.authservice.sensitive-headers=Set-Cookie,Authorization
