--- a/spring-config/configurations/profile-service-local.properties
+++ b/spring-config/configurations/profile-service-local.properties
@@ -1,7 +1,7 @@
-# Spring: Application name
+# Application name
 spring.application.name=profile-service
 
-# Port server
+# Application port
 server.port=8081
 
 # Spring: Hibernate Configuration
@@ -14,12 +14,12 @@ spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_profile_s
 spring.datasource.username=sn_profile_service_user
 spring.datasource.password=sn_profile_service_password
 
-# Eureka Server
-eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
-
 # Spring: Multipart File Size
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Spring Cloud: Eureka Configuration
+eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
 # SocialNetwork: Profile
 sn.profile.default.avatar.path=/avatar/default-avatar.jpg
@@ -30,6 +30,5 @@ sn.kafka.server=kafka:9092
 sn.kafka.groupId=profile-default-group-id
 
 # SocialNetwork: Kafka Topics
-
 sn.kafka.topic.user.update=topic.user.update
 sn.kafka.topic.user.delete=topic.user.delete
