--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -1,4 +1,4 @@
-# Spring: Application name
+# Application name
 spring.application.name=user-service
 
 # Server port
@@ -14,7 +14,7 @@ spring.datasource.url=jdbc:postgresql://socialnetwork-database:5432/sn_user_serv
 spring.datasource.username=sn_user_service_user
 spring.datasource.password=sn_user_service_password
 
-# Eureka Server
+# Spring Cloud: Eureka Configuration
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
 # SocialNetwork: User
@@ -28,5 +28,4 @@ sn.kafka.server=kafka:9092
 sn.kafka.groupId=user-default-group-id
 
 # SocialNetwork: Kafka Topics
-
 sn.kafka.producer.topic.profile.new=topic.profile.new
