--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,3 +118,14 @@ services:
     depends_on:
       - socialnetwork-user-service
       - socialnetwork-profile-service
+
+  socialnetwork-integration-testing:
+    image: socialnetwork-integration-testing-1.0
+    environment:
+      - SPRING_PROFILE_ACTIVE=local
+    ports:
+      - "8088:8088"
+      - "5009:5009"
+    depends_on:
+      - socialnetwork-user-service
+      - socialnetwork-profile-service
