Added new config server properties and updated current

--- a/socialnetwork-unit-testing/src/main/resources/bootstrap.properties
+++ b/socialnetwork-unit-testing/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
 # Application name
-spring.application.name=profile-service
+spring.application.name=unit-testing
 
 # Application port
-server.port=8081
+server.port=8087
 
 # Profile
 spring.profiles.active=local
