--- a/socialnetwork-integration-testing/src/main/resources/bootstrap.properties
+++ b/socialnetwork-integration-testing/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
 # Application name
-spring.application.name=profile-service
+spring.application.name=integration-testing
 
 # Application port
-server.port=8081
+server.port=8088
 
 # Profile
 spring.profiles.active=local
