--- a/socialnetwork-service-discovery/src/main/resources/bootstrap.properties
+++ b/socialnetwork-service-discovery/src/main/resources/bootstrap.properties
@@ -4,6 +4,5 @@ spring.application.name=service-discovery
 # Application port
 server.port=8761
 
-# Spring Cloud: Config
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+# Profile
+spring.profiles.active=local
