--- a/socialnetwork-user-service/src/main/resources/bootstrap.properties
+++ b/socialnetwork-user-service/src/main/resources/bootstrap.properties
@@ -1,8 +1,8 @@
 # Application name
 spring.application.name=user-service
 
+# Application port
+server.port=8084
+
 # Profile
 spring.profiles.active=local
-
-# Spring Cloud: Config
-spring.cloud.config.uri=http://socialnetwork-config-server:8888
