--- a/spring-config/configurations/api-gateway-local.properties
+++ b/spring-config/configurations/api-gateway-local.properties
@@ -1,11 +1,8 @@
-# Application name
-spring.application.name=api-gateway
-
-# Application port
-server.port=8762
-
 # Spring Cloud: Eureka
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+
+# Spring Cloud: Config
+spring.cloud.config.uri=http://socialnetwork-config-server:8888
 
 # Spring Cloud: Zuul Configuration
 zuul.routes.authservice.path=/auth-service/**
