--- a/spring-config/configurations/auth-service-local.properties
+++ b/spring-config/configurations/auth-service-local.properties
@@ -1,12 +1,9 @@
-# Application name
-spring.application.name=auth-service
+# Spring Cloud: Eureka Configuration
+eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
-# Application port
-server.port=8080
+# Spring Cloud: Config
+spring.cloud.config.uri=http://socialnetwork-config-server:8888
 
 # Jwt Configuration
 security.jwt.token.secret-key=sn_socialnetwork
 security.jwt.token.expire-length=3600000
-
-# Spring Cloud: Eureka Configuration
-eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
