--- a/spring-config/configurations/profile-service-local.properties
+++ b/spring-config/configurations/profile-service-local.properties
@@ -1,9 +1,3 @@
-# Application name
-spring.application.name=profile-service
-
-# Application port
-server.port=8081
-
 # Spring: Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
@@ -20,6 +14,9 @@ spring.servlet.multipart.max-request-size=10MB
 
 # Spring Cloud: Eureka Configuration
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+
+# Spring Cloud: Config
+spring.cloud.config.uri=http://socialnetwork-config-server:8888
 
 # SocialNetwork: Profile
 sn.profile.default.avatar.path=/avatar/default-avatar.jpg
