--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -1,9 +1,3 @@
-# Application name
-spring.application.name=user-service
-
-# Server port
-server.port=8084
-
 # Spring: Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
@@ -16,6 +10,9 @@ spring.datasource.password=sn_user_service_password
 
 # Spring Cloud: Eureka Configuration
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+
+# Spring Cloud: Config
+spring.cloud.config.uri=http://socialnetwork-config-server:8888
 
 # SocialNetwork: User
 sn.user.default.role=USER
