Updated config server properties for unit and integration testing in config-server

--- a/spring-config/configurations/integration-testing-local.properties
+++ b/spring-config/configurations/integration-testing-local.properties
@@ -1,4 +1,2 @@
-# Spring Cloud: Eureka Configuration
-spring.cloud.service-registry.auto-registration.enabled=false
-eureka.client.enabled=false
-eureka.client.serviceUrl.registerWithEureka=false
+# Spring Cloud: Discovery
+spring.cloud.discovery.enabled=false
