--- a/spring-config/configurations/unit-testing-local.properties
+++ b/spring-config/configurations/unit-testing-local.properties
@@ -1,2 +1,5 @@
 # Spring Cloud: Discovery
 spring.cloud.discovery.enabled=false
+
+# Spring Cloud: Config
+spring.cloud.config.uri=http://socialnetwork-config-server:8888
