--- a/socialnetwork-api-gateway/pom.xml
+++ b/socialnetwork-api-gateway/pom.xml
@@ -19,10 +19,14 @@
 
     <properties>
         <java.version>14</java.version>
-        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
-        <spring.cloud.zuul.version>2.2.5.RELEASE</spring.cloud.zuul.version>
-        <spring.cloud.starter.config.version>2.2.5.RELEASE</spring.cloud.starter.config.version>
-        <jackson.version>2.11.2</jackson.version>
+        <spring.boot.version>2.7.0</spring.boot.version>
+        <spring.boot.web.version>2.7.0</spring.boot.web.version>
+        <spring.cloud.netflix.eureka.client.version>3.1.3</spring.cloud.netflix.eureka.client.version>
+        <spring.cloud.commons.version>3.1.3</spring.cloud.commons.version>
+        <spring.cloud.gateway.version>3.1.3</spring.cloud.gateway.version>
+        <spring.cloud.loadbalancer.version>3.1.3</spring.cloud.loadbalancer.version>
+        <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
+        <jackson.version>2.13.3</jackson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,14 +39,34 @@
             <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-            <version>${spring.cloud.zuul.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.web.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-            <version>${spring.cloud.starter.config.version}</version>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring.cloud.netflix.eureka.client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons</artifactId>
+            <version>${spring.cloud.commons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>${spring.cloud.gateway.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+            <version>${spring.cloud.loadbalancer.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+            <version>${spring.cloud.config.client.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -56,7 +80,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.5.RELEASE</version>
+                <version>2.7.0</version>
                 <configuration>
                     <mainClass>local.socialnetwork.apigateway.SpringBootRunApiGateway</mainClass>
                 </configuration>
