--- a/socialnetwork-auth-service/pom.xml
+++ b/socialnetwork-auth-service/pom.xml
@@ -19,12 +19,14 @@
 
     <properties>
         <java.version>14</java.version>
-        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
-        <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
-        <spring.boot.security>2.3.3.RELEASE</spring.boot.security>
-        <spring.cloud.config.starter.version>2.2.5.RELEASE</spring.cloud.config.starter.version>
+        <spring.boot.version>2.7.0</spring.boot.version>
+        <spring.boot.web.version>2.7.0</spring.boot.web.version>
+        <spring.boot.security>2.7.0</spring.boot.security>
+        <spring.cloud.netflix.eureka.client.version>3.1.3</spring.cloud.netflix.eureka.client.version>
+        <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
+        <spring.cloud.openfeign.version>3.1.3</spring.cloud.openfeign.version>
         <jwt.version>0.9.1</jwt.version>
-        <jackson.version>2.11.2</jackson.version>
+        <jackson.version>2.13.3</jackson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -48,8 +50,18 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-            <version>${spring.cloud.config.starter.version}</version>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring.cloud.netflix.eureka.client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+            <version>${spring.cloud.config.client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${spring.cloud.openfeign.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -67,7 +79,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.5.RELEASE</version>
+                <version>2.7.0</version>
                 <configuration>
                     <mainClass>local.socialnetwork.authservice.SpringBootRunAuthService</mainClass>
                 </configuration>
