--- a/socialnetwork-config-server/pom.xml
+++ b/socialnetwork-config-server/pom.xml
@@ -19,8 +19,8 @@
 
     <properties>
         <java.version>14</java.version>
-        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
-        <spring.cloud.config.server.version>2.2.5.RELEASE</spring.cloud.config.server.version>
+        <spring.boot.version>2.7.0</spring.boot.version>
+        <spring.cloud.config.server.version>3.1.3</spring.cloud.config.server.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -45,7 +45,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.5.RELEASE</version>
+                <version>2.7.0</version>
                 <configuration>
                     <mainClass>local.socialnetwork.configserver.SpringBootRunConfigServer</mainClass>
                 </configuration>
