--- a/socialnetwork-user-service/pom.xml
+++ b/socialnetwork-user-service/pom.xml
@@ -19,15 +19,17 @@
 
     <properties>
         <java.version>14</java.version>
-        <spring.boot.version>2.3.3.RELEASE</spring.boot.version>
-        <spring.boot.web.version>2.3.3.RELEASE</spring.boot.web.version>
-        <spring.boot.data.jpa.version>2.3.3.RELEASE</spring.boot.data.jpa.version>
-        <spring.cloud.config.starter.version>2.2.5.RELEASE</spring.cloud.config.starter.version>
-        <spring.kafka.version>2.6.3</spring.kafka.version>
-        <jackson.version>2.11.3</jackson.version>
-        <swagger.annotations.version>2.1.6</swagger.annotations.version>
-        <springdoc.openapi.ui.version>1.5.2</springdoc.openapi.ui.version>
-        <projectlombok.version>RELEASE</projectlombok.version>
+        <spring.boot.version>2.7.0</spring.boot.version>
+        <spring.boot.web.version>2.7.0</spring.boot.web.version>
+        <spring.boot.data.jpa.version>2.7.0</spring.boot.data.jpa.version>
+        <spring.cloud.netflix.eureka.client.version>3.1.3</spring.cloud.netflix.eureka.client.version>
+        <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
+        <spring.cloud.openfeign.version>3.1.3</spring.cloud.openfeign.version>
+        <spring.kafka.version>2.8.5</spring.kafka.version>
+        <jackson.version>2.13.3</jackson.version>
+        <swagger.annotations.version>2.2.0</swagger.annotations.version>
+        <springdoc.openapi.ui.version>1.6.9</springdoc.openapi.ui.version>
+        <projectlombok.version>1.18.24</projectlombok.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -51,8 +53,18 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
-            <version>${spring.cloud.config.starter.version}</version>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring.cloud.netflix.eureka.client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+            <version>${spring.cloud.config.client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${spring.cloud.openfeign.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
