--- a/socialnetwork-api-gateway/pom.xml
+++ b/socialnetwork-api-gateway/pom.xml
@@ -20,13 +20,13 @@
     <properties>
         <java.version>14</java.version>
         <spring.boot.version>2.7.0</spring.boot.version>
-        <spring.boot.web.version>2.7.0</spring.boot.web.version>
         <spring.cloud.netflix.eureka.client.version>3.1.3</spring.cloud.netflix.eureka.client.version>
         <spring.cloud.commons.version>3.1.3</spring.cloud.commons.version>
         <spring.cloud.gateway.version>3.1.3</spring.cloud.gateway.version>
         <spring.cloud.loadbalancer.version>3.1.3</spring.cloud.loadbalancer.version>
         <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
         <jackson.version>2.13.3</jackson.version>
+        <gson.version>2.9.0</gson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,20 +39,15 @@
             <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring.boot.web.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
             <version>${spring.cloud.netflix.eureka.client.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-commons</artifactId>
-            <version>${spring.cloud.commons.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-commons</artifactId>-->
+<!--            <version>${spring.cloud.commons.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -72,6 +67,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 
