--- a/socialnetwork-service-discovery/pom.xml
+++ b/socialnetwork-service-discovery/pom.xml
@@ -21,7 +21,9 @@
         <java.version>14</java.version>
         <spring.boot.version>2.7.0</spring.boot.version>
         <spring.cloud.netflix.eureka.server.version>3.1.3</spring.cloud.netflix.eureka.server.version>
+        <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
         <jackson.version>2.13.3</jackson.version>
+        <gson.version>2.9.0</gson.version>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,9 +41,19 @@
             <version>${spring.cloud.netflix.eureka.server.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+            <version>${spring.cloud.config.client.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
     </dependencies>
 
