--- a/socialnetwork-config-server/src/main/resources/application.properties
+++ b/socialnetwork-config-server/src/main/resources/application.properties
@@ -8,8 +8,9 @@ server.port=8888
 spring.profiles.active=local
 
 # Spring Cloud: Config
-spring.cloud.config.uri=http://localhost:8888
+spring.config.import=configserver:http://socialnetwork-config-server:8888
 spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
+spring.cloud.config.server.git.default-label=master
 spring.cloud.config.server.git.search-paths=spring-config/configurations
 
 # Spring Cloud: Eureka Configuration
