Deleted config-client with properties in service-discovery

--- a/socialnetwork-service-discovery/src/main/resources/application.properties
+++ b/socialnetwork-service-discovery/src/main/resources/application.properties
@@ -7,5 +7,6 @@ server.port=8761
 # Profile
 spring.profiles.active=local
 
-# Spring Cloud: Config
-spring.config.import=configserver:http://socialnetwork-config-server:8888
+# Spring Cloud: Eureka
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
