--- a/socialnetwork-profile-service/pom.xml
+++ b/socialnetwork-profile-service/pom.xml
@@ -26,6 +26,7 @@
         <spring.cloud.config.client.version>3.1.3</spring.cloud.config.client.version>
         <spring.cloud.openfeign.version>3.1.3</spring.cloud.openfeign.version>
         <spring.kafka.version>2.8.5</spring.kafka.version>
+        <jackson.version>2.13.3</jackson.version>
         <swagger.annotations.version>2.2.0</swagger.annotations.version>
         <springdoc.openapi.ui.version>1.6.9</springdoc.openapi.ui.version>
         <google.guava.version>31.1-jre</google.guava.version>
@@ -70,6 +71,11 @@
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
             <version>${spring.kafka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
