--- a/socialnetwork-service-discovery/src/main/resources/application.properties
+++ b/socialnetwork-service-discovery/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.profiles.active=local
 # Spring Cloud: Eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+spring.config.import="optional:configserver:"
