--- a/socialnetwork-service-discovery/src/main/resources/application.properties
+++ b/socialnetwork-service-discovery/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.profiles.active=local
 # Spring Cloud: Eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+# Spring Cloud: Config
+spring.config.import=optional:configserver:http://socialnetwork-config-server:8888
