Updated pom's.xml and application's.properties. Added wait-for-it.sh for rest-api service

--- a/socialnetwork-service-discovery/src/main/resources/application.properties
+++ b/socialnetwork-service-discovery/src/main/resources/application.properties
@@ -12,4 +12,4 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 
 # Spring Cloud: Config
-spring.config.import=optional:configserver:http://socialnetwork-config-server:8888
+spring.cloud.config.enabled=false
