--- a/socialnetwork-user-service/src/main/resources/application.properties
+++ b/socialnetwork-user-service/src/main/resources/application.properties
@@ -8,4 +8,4 @@ server.port=8084
 spring.profiles.active=local
 
 # Spring Cloud: Config
-spring.config.import=configserver:http://socialnetwork-config-server:8888
+spring.config.import=optional:configserver:http://socialnetwork-config-server:8888
