--- a/socialnetwork-profile-service/pom.xml
+++ b/socialnetwork-profile-service/pom.xml
@@ -73,9 +73,19 @@
             <version>${spring.kafka.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.5.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
