Enabled debugging for api-gateway in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,10 +25,11 @@ services:
     image: socialnetwork-api-gateway-1.0
     ports:
       - "8762:8762"
+      - "5009:5009"
     depends_on:
       - socialnetwork-eureka-service-discovery
       - socialnetwork-config-server
-    entrypoint: ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=20 -- java -jar socialnetwork-api-gateway-1.0.jar
+    entrypoint: ./wait-for-it.sh socialnetwork-config-server:8888 --timeout=20 -- java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5009 -jar socialnetwork-api-gateway-1.0.jar
 
   zookeeper:
     image: wurstmeister/zookeeper
