Changed secret key for auth-service-local.properties in config-server

--- a/spring-config/configurations/auth-service-local.properties
+++ b/spring-config/configurations/auth-service-local.properties
@@ -2,5 +2,5 @@
 eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
 
 # Jwt Configuration
-security.jwt.token.secret-key=sn_socialnetwork
+security.jwt.token.secret-key=D(G+KbPeShVmYq3s6v9y$B&E)H@McQfT
 security.jwt.token.expire-length=3600000
