Added new property for auth-server-local.properties in config-server

--- a/spring-config/configurations/auth-server-local.properties
+++ b/spring-config/configurations/auth-server-local.properties
@@ -14,3 +14,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 # Jwt Configuration
 security.jwt.token.secret-key=c1NxnyGc34E87RnTkERjlwmjkD7Yt/r0XrfwnqcS
 security.jwt.token.expire-length=3600000
+
+# SocialNetwork: User
+sn.user.registration.default.role=USER
