Updated auth-server-local.properties in config-server

--- a/spring-config/configurations/auth-server-local.properties
+++ b/spring-config/configurations/auth-server-local.properties
@@ -16,4 +16,4 @@ security.jwt.token.secret-key=Fahbdd9WWZQieIx4dDKVih7fSXg5yeCucLDzAshzsvVilytFN5
 security.jwt.token.expire-length=3600000
 
 # SocialNetwork: User
-sn.user.registration.default.role=USER
+sn.user.signup.default.role=USER
