Updated property of role for auth-server-local.properties in config-server

--- a/spring-config/configurations/auth-server-local.properties
+++ b/spring-config/configurations/auth-server-local.properties
@@ -19,4 +19,4 @@ security.jwt.token.expire-length=3600000
 sn.kafka.server=localhost:9092
 
 # SocialNetwork: User
-sn.user.signup.default.role=USER
+sn.auth.user.signup.default.role=USER
