Added kafka topics for auth-server-local.properties in config-server

--- a/spring-config/configurations/auth-server-local.properties
+++ b/spring-config/configurations/auth-server-local.properties
@@ -18,5 +18,9 @@ security.jwt.token.expire-length=3600000
 # SocialNetwork: Kafka
 sn.kafka.server=localhost:9092
 
+# SocialNetwork: Kafka Topics
+sn.kafka.topic.user.new=topic.user.new
+sn.kafka.topic.profile.new=topic.profile.new
+
 # SocialNetwork: User
 sn.auth.user.signup.default.role=USER
