Added default avatar property for auth-server-local.properties in config-server

--- a/spring-config/configurations/auth-server-local.properties
+++ b/spring-config/configurations/auth-server-local.properties
@@ -24,3 +24,6 @@ sn.kafka.topic.profile.new=topic.profile.new
 
 # SocialNetwork: User
 sn.auth.user.signup.default.role=USER
+
+# SocialNetwork: Profile
+sn.profile.default.avatar.path=/avatar/default-avatar.jpg
