Changed value of property 'sn.kafka.server' for user-service-local.properties in config-server

--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -14,5 +14,5 @@ spring.datasource.password=sn_user_service_password
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # SocialNetwork: Kafka
-sn.kafka.server=kafka:9092
+sn.kafka.server=localhost:9092
 sn.kafka.groupId=user-default-group-id
