Updated auth-server-local.properties, user-service-local.properties and profile-service-local.properties

--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -16,3 +16,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 # SocialNetwork: Kafka
 sn.kafka.server=localhost:9092
 sn.kafka.groupId=user-default-group-id
+
+# SocialNetwork: Kafka Topics
+sn.kafka.topic.profile.new=topic.profile.new
