Changed host for property 'sn.kafka.server' for profile-service-local.properties in config-server

--- a/spring-config/configurations/profile-service-local.properties
+++ b/spring-config/configurations/profile-service-local.properties
@@ -20,5 +20,5 @@ sn.profile.default.avatar.path=/avatar/default-avatar.jpg
 sn.profile.upload.avatar.dir.path=/avatar/
 
 # SocialNetwork: Kafka
-sn.kafka.server=kafka:9092
+sn.kafka.server=localhost:9092
 sn.kafka.groupId=profile-default-group-id
