Added default path of avatar for user-service-local.properties in config-server

--- a/spring-config/configurations/user-service-local.properties
+++ b/spring-config/configurations/user-service-local.properties
@@ -13,6 +13,9 @@ spring.datasource.password=sn_user_service_password
 # Spring Cloud: Eureka Configuration
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+# SocialNetwork: Profile
+sn.profile.default.avatar.path=/avatar/default-avatar.jpg
+
 # SocialNetwork: Kafka
 sn.kafka.server=localhost:9092
 sn.kafka.groupId=user-default-group-id
