Updated host of config server in application.properties for api-gateway

--- a/socialnetwork-api-gateway/src/main/resources/application.properties
+++ b/socialnetwork-api-gateway/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8762
 spring.profiles.active=local
 
 # Spring Cloud: Config
-spring.config.import=optional:configserver:http://socialnetwork-config-server:8888
+spring.config.import=optional:configserver:http://localhost:8888
 
 spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
 
