Updated host of eureka client for api-gateway-local.properties in config-server

--- a/spring-config/configurations/api-gateway-local.properties
+++ b/spring-config/configurations/api-gateway-local.properties
@@ -1,2 +1,2 @@
 # Spring Cloud: Eureka
-eureka.client.serviceUrl.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
