Added user client property for feign client in config-server

--- a/spring-config/configurations/profile-service-local.properties
+++ b/spring-config/configurations/profile-service-local.properties
@@ -22,3 +22,6 @@ sn.profile.upload.avatar.dir.path=/avatar/
 # SocialNetwork: Kafka
 sn.kafka.server=localhost:9092
 sn.kafka.groupId=profile-default-group-id
+
+# SocialNetwork: User Feign Client
+sn.feignclient.userservice.url=http://localhost:8084
