Added a title for every type of the dependencies to pom's.xml in every service

--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
             </dependency>
-            <!-- Fasterxml Jackson -->
+            <!-- FasterXML Jackson -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
@@ -174,7 +174,7 @@
                 <artifactId>gson</artifactId>
                 <version>${gson.version}</version>
             </dependency>
-            <!-- Swagger -->
+            <!-- Swagger Core -->
             <dependency>
                 <groupId>io.swagger.core.v3</groupId>
                 <artifactId>swagger-annotations</artifactId>
