--- a/socialnetwork-integration-testing/pom.xml
+++ b/socialnetwork-integration-testing/pom.xml
@@ -15,6 +15,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <!-- Java version -->
         <java.version>20</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -22,6 +23,7 @@
     </properties>
 
     <dependencies>
+        <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
