--- a/socialnetwork-unit-testing/pom.xml
+++ b/socialnetwork-unit-testing/pom.xml
@@ -15,6 +15,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <!-- Java version -->
         <java.version>20</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -22,11 +23,13 @@
     </properties>
 
     <dependencies>
+        <!-- jUnit Jupiter -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
