Changed user-service host for OpenFeign client in profile-service

--- a/spring-config/configurations/profile-service-local.properties
+++ b/spring-config/configurations/profile-service-local.properties
@@ -24,4 +24,4 @@ sn.kafka.server=localhost:9092
 sn.kafka.groupId=profile-default-group-id
 
 # SocialNetwork: User Feign Client
-sn.feignclient.userservice.url=http://localhost:8084
+sn.feignclient.userservice.url=http://localhost:8084/api/v1
