Added hosts for routes to properties in api-gateway

--- a/spring-config/configurations/api-gateway-local.properties
+++ b/spring-config/configurations/api-gateway-local.properties
@@ -7,3 +7,7 @@ spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
+
+# API Gateway Route Hosts
+sn.api-gateway.route.host.user-service=http://localhost:8084
+sn.api-gateway.route.host.profile-service=http://localhost:8081
