--- a/spring-config/configurations/api-gateway-docker.properties
+++ b/spring-config/configurations/api-gateway-docker.properties
@@ -7,3 +7,7 @@ spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=*
+
+# API Gateway Route Hosts
+sn.api-gateway.route.host.user-service=http://socialnetwork-user-service:8084
+sn.api-gateway.route.host.profile-service=http://socialnetwork-profile-service:8081
