--- a/socialnetwork-api-gateway/docker/Dockerfile
+++ b/socialnetwork-api-gateway/docker/Dockerfile
@@ -1,9 +1,11 @@
-FROM openjdk:14
+FROM openjdk:20
 
 EXPOSE 8762
 
-ADD ./wait-for-it.sh /wait-for-it.sh
+ADD ../wait-for-it.sh /wait-for-it.sh
 
-COPY ./target/socialnetwork-api-gateway-1.0.jar socialnetwork-api-gateway-1.0.jar
+WORKDIR /app
+
+COPY ../target/socialnetwork-api-gateway-1.0.jar /app
 
 ENTRYPOINT ["java", "-jar", "socialnetwork-api-gateway-1.0.jar"]
