--- a/socialnetwork-auth-server/docker/Dockerfile
+++ b/socialnetwork-auth-server/docker/Dockerfile
@@ -1,9 +1,11 @@
-FROM openjdk:19
+FROM openjdk:20
 
 EXPOSE 8080
 
-ADD ./wait-for-it.sh /wait-for-it.sh
+ADD ../wait-for-it.sh /wait-for-it.sh
 
-COPY ./target/socialnetwork-auth-server-1.0.jar socialnetwork-auth-server-1.0.jar
+WORKDIR /app
+
+COPY ../target/socialnetwork-auth-server-1.0.jar /app
 
 ENTRYPOINT ["java", "-jar", "socialnetwork-auth-server-1.0.jar"]
