Fixed dependencies for pom's.xml in the all services

--- a/socialnetwork-service-discovery/pom.xml
+++ b/socialnetwork-service-discovery/pom.xml
@@ -50,6 +50,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
