--- a/socialnetwork-auth-server/pom.xml
+++ b/socialnetwork-auth-server/pom.xml
@@ -83,6 +83,10 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
         <!-- GSON -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
