Added PostgreSQL dialect for auth-server-local.properties in config-server

--- a/spring-config/configurations/auth-server-local.properties
+++ b/spring-config/configurations/auth-server-local.properties
@@ -8,6 +8,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sn_auth_server_db
 spring.datasource.username=sn_auth_server_user
 spring.datasource.password=sn_auth_server_password
 
+# Hibernate: PostgreSQL Dialect
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 # Spring Cloud: Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
