Small refactoring for some services

--- a/socialnetwork-config-server/src/main/resources/application.properties
+++ b/socialnetwork-config-server/src/main/resources/application.properties
@@ -1,16 +1,10 @@
 # Application name
 spring.application.name=config-server
 
-# Port
+# Application port
 server.port=8888
-
-# Profile
-spring.profiles.active=local
 
 # Spring Cloud: Config
 spring.cloud.config.server.git.uri=https://github.com/skovdev/socialnetwork
 spring.cloud.config.server.git.default-label=master
 spring.cloud.config.server.git.search-paths=spring-config/configurations
-
-# Spring Cloud: Eureka Configuration
-eureka.client.service-url.defaultZone=http://socialnetwork-eureka-service-discovery:8761/eureka/
