[socialnetwork-config-server]: Updated properties

--- a/spring-config/configurations/auth-server-docker.properties
+++ b/spring-config/configurations/auth-server-docker.properties
@@ -20,9 +20,7 @@ security.jwt.token.expire-length=3600000
 
 # SocialNetwork: Kafka
 sn.kafka.server=kafka:9092
-
-# SocialNetwork: Kafka Topics
-sn.kafka.topic.user.new=topic.user.new
+sn.kafka.groupId=auth-user-default-group-id
 
 # SocialNetwork: User
 sn.auth.user.signup.default.role=USER
