[socialnetwork-auth-server]: Implemented SAGA Pattern for user registration including profile

--- a/socialnetwork-auth-server/src/test/resources/application-test.properties
+++ b/socialnetwork-auth-server/src/test/resources/application-test.properties
@@ -15,6 +15,7 @@ security.jwt.token.expire-length=3600000
 
 # SocialNetwork: Kafka
 sn.kafka.server=localhost:9092
+sn.kafka.groupId=auth-user-default-group-id
 
 # SocialNetwork: Kafka Topics
 sn.kafka.topic.user.new=topic.user.new
